--- a/index.html
+++ b/index.html
@@ -9,6 +9,89 @@
     <title>Component Library</title>
 </head>
 <body>
-    
+    <h3 style="text-align: center; margin: 1rem;">AVATAR</h3>
+    <div style="display: flex; align-items: center; justify-content: space-evenly; margin-bottom: 1rem;">
+        <div class="avatar avatar-loggedOut">
+            <svg class="profile-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="r-m0bqgq r-4qtqp9 r-yyyyoo r-1yevf0r r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-meisx5"><g fill="#5B7083"><path d="M12.225 12.165c-1.356 0-2.872-.15-3.84-1.256-.814-.93-1.077-2.368-.805-4.392.38-2.826 2.116-4.513 4.646-4.513s4.267 1.687 4.646 4.513c.272 2.024.008 3.46-.806 4.392-.97 1.106-2.485 1.255-3.84 1.255zm5.849 9.85H6.376c-.663 0-1.25-.28-1.65-.786-.422-.534-.576-1.27-.41-1.968.834-3.53 4.086-5.997 7.908-5.997s7.074 2.466 7.91 5.997c.164.698.01 1.434-.412 1.967-.4.505-.985.785-1.648.785z" fill="#e2e2e2"></path></g></svg>
+        </div>
+        <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar-signIN">
+        <div class="avatar-text">
+            R
+        </div>
+    </div>
+    <div class="divider"></div>
+    <h3 style="text-align: center; margin: 1rem;">ALERTS</h3>
+    <div class="alert alert-primary" role="alert">
+        This is a PRIMARY Alert
+    </div>
+    <div class="alert alert-success" role="alert">
+        This is a SUCCESS Alert
+    </div>
+    <div class="alert alert-danger" role="alert">
+        This is a DANGER Alert
+    </div>
+    <div class="alert alert-warning" role="alert">
+        This is a WARNING Alert
+    </div>
+    <div class="divider"></div>
+    <h3 style="text-align: center; margin: 1rem;">BADGE</h3>
+    <div style="display: flex; align-items: center; justify-content: center; margin: 1rem;">
+        <span class="badge badge-primary">Primary</span>
+        <span class="badge badge-success">Success</span>
+        <span class="badge badge-warning">Warning</span>
+        <span class="badge badge-danger">Danger</span>
+    </div>
+    <div style="display: flex; align-items: center; justify-content: center; margin: 1rem;">
+        <span class="badge-pills badge-primary">Primary</span>
+        <span class="badge-pills badge-success">Success</span>
+        <span class="badge-pills badge-warning">Warning</span>
+        <span class="badge-pills badge-danger">Danger</span>
+    </div>
+    <div class="divider"></div>
+    <h3 style="text-align: center; margin: 1rem;">BUTTONS</h3>
+    <div style="margin: 1rem; text-align: center;">
+    <button class="btn btn-primary">
+        Primary
+    </button>
+    <button class="btn btn-primary-success">
+        Success
+    </button>
+    <button class="btn btn-primary-warning">
+        Warning
+    </button>
+    <button class="btn btn-primary-danger">
+        Danger
+    </button>
+    <button class="btn btn-secondary">
+        Primary
+    </button>
+    <button class="btn btn-secondary-success">
+        Success
+    </button>
+    <button class="btn btn-secondary-warning">
+        Warning
+    </button>
+    <button class="btn btn-secondary-danger">
+        Danger
+    </button>
+</div>
+<div class="divider"></div>
+<h3 style="text-align: center; margin: 1rem;">LINKS</h3>
+<div style="text-align: center; margin: 1rem;">
+    <a class="link link-primary" href="">Primary Link</a>
+    <a href="" class="link link-secondary">
+        Secondary Link
+    </a>
+</div>
+<div class="divider"></div>
+<h3 style="text-align: center; margin: 1rem;">ICONS and FLOATING ACTION BUTTON</h3>
+<div style="text-align: center; margin: 1rem;">
+    <button class="floating-action">
+        <svg style="background-color: transparent;" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1q142lx r-1xvli5t r-19u6a5r r-dnmrzs r-bnwqim r-1plcrui r-lrvibr" width="24"  height="24" ><g fill="#6f85ff"><path d="M19.75 11H13V4.25c0-.553-.447-1-1-1s-1 .447-1 1V11H4.25c-.553 0-1 .447-1 1s.447 1 1 1H11v6.75c0 .553.447 1 1 1s1-.447 1-1V13h6.75c.553 0 1-.447 1-1s-.447-1-1-1z" fill="#ffffff"></path></g></svg>
+    </button>
+</div>
+<div class="divider"></div>
+<h3 style="text-align: center; margin: 1rem;">CARDS</h3>
+
 </body>
 </html>
