--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 </head>
 <body>
     <h3 style="text-align: center; margin: 1rem;">AVATAR</h3>
-    <div style="display: flex; align-items: center; justify-content: space-evenly; margin-bottom: 1rem;">
-        <div class="avatar avatar-loggedOut">
-            <svg class="profile-icon" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="r-m0bqgq r-4qtqp9 r-yyyyoo r-1yevf0r r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-meisx5"><g fill="#5B7083"><path d="M12.225 12.165c-1.356 0-2.872-.15-3.84-1.256-.814-.93-1.077-2.368-.805-4.392.38-2.826 2.116-4.513 4.646-4.513s4.267 1.687 4.646 4.513c.272 2.024.008 3.46-.806 4.392-.97 1.106-2.485 1.255-3.84 1.255zm5.849 9.85H6.376c-.663 0-1.25-.28-1.65-.786-.422-.534-.576-1.27-.41-1.968.834-3.53 4.086-5.997 7.908-5.997s7.074 2.466 7.91 5.997c.164.698.01 1.434-.412 1.967-.4.505-.985.785-1.648.785z" fill="#e2e2e2"></path></g></svg>
-        </div>
-        <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar-signIN">
-        <div class="avatar-text">
-            R
-        </div>
+    <div style="display: flex; align-items: center;  margin-bottom: 1rem;">
+        <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar">
+        <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-2x">
+        <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-3x">
     </div>
     <div class="divider"></div>
     <h3 style="text-align: center; margin: 1rem;">ALERTS</h3>
@@ -47,6 +43,7 @@
         <span class="badge-pills badge-warning">Warning</span>
         <span class="badge-pills badge-danger">Danger</span>
     </div>
+   
     <div class="divider"></div>
     <h3 style="text-align: center; margin: 1rem;">BUTTONS</h3>
     <div style="margin: 1rem; text-align: center;">
@@ -92,6 +89,29 @@
 </div>
 <div class="divider"></div>
 <h3 style="text-align: center; margin: 1rem;">CARDS</h3>
-
+<div class="card">
+    <img class="card__img" src="https://via.placeholder.com/150" alt="">
+    <div class="card__body">
+        <h3 class="card__header">Card Header</h3>
+        <p class="card__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum debitis impedit harum perspiciatis iusto mollitia laborum qui numquam, deleniti cumque, quos amet incidunt, aperiam nesciunt id labore sunt aut dolorem.
+        </p>
+        <span class="badge badge-danger card-badge">HOT</span>
+    </div>
+</div>
+<div class="divider"></div>    
+<div class="card">
+    <img class="card__img" src="https://via.placeholder.com/150" alt="">
+    <div class="card__body">
+        <h3 class="card__header">Card Header</h3>
+        <p class="card__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum debitis impedit harum perspiciatis iusto mollitia laborum qui numquam, deleniti cumque, quos amet incidunt, aperiam nesciunt id labore sunt aut dolorem.
+        </p>
+        <div class="card__dismiss">
+            <svg style="background-color: white;" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path 
+                fill = "black" d="M12 11.293l10.293-10.293.707.707-10.293 10.293 10.293 10.293-.707.707-10.293-10.293-10.293 10.293-.707-.707 10.293-10.293-10.293-10.293.707-.707 10.293 10.293z"/></svg>
+        </div>
+    </div>
+</div>
 </body>
 </html>
