--- a/index.html
+++ b/index.html
@@ -90,26 +90,53 @@
 <div class="divider"></div>
 <h3 style="text-align: center; margin: 1rem;">CARDS</h3>
 <div class="card">
-    <img class="card__img" src="https://via.placeholder.com/150" alt="">
-    <div class="card__body">
+    <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+    <div class="card__body__container">
         <h3 class="card__header">Card Header</h3>
-        <p class="card__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum debitis impedit harum perspiciatis iusto mollitia laborum qui numquam, deleniti cumque, quos amet incidunt, aperiam nesciunt id labore sunt aut dolorem.
-        </p>
-        <span class="badge badge-danger card-badge">HOT</span>
+        <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
     </div>
 </div>
-<div class="divider"></div>    
-<div class="card">
-    <img class="card__img" src="https://via.placeholder.com/150" alt="">
-    <div class="card__body">
+<div class="divider"></div>
+<div class="card card__with__badge">
+    <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+    <div class="card__body__container">
         <h3 class="card__header">Card Header</h3>
-        <p class="card__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum debitis impedit harum perspiciatis iusto mollitia laborum qui numquam, deleniti cumque, quos amet incidunt, aperiam nesciunt id labore sunt aut dolorem.
-        </p>
-        <div class="card__dismiss">
-            <svg style="background-color: white;" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path 
-                fill = "black" d="M12 11.293l10.293-10.293.707.707-10.293 10.293 10.293 10.293-.707.707-10.293-10.293-10.293 10.293-.707-.707 10.293-10.293-10.293-10.293.707-.707 10.293 10.293z"/></svg>
+        <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
+    </div>
+    <span class="badge badge-danger card__badge">HOT</span>
+</div>
+<div class="divider"></div>
+<div class="card card__with__dismiss">
+    <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+    <div class="card__body__container">
+        <h3 class="card__header">Card Header</h3>
+        <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
+    </div>
+    <div class="card__dismiss">
+        <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg height="24px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="24px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M443.6,387.1L312.4,255.4l131.5-130c5.4-5.4,5.4-14.2,0-19.6l-37.4-37.6c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4  L256,197.8L124.9,68.3c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4L68,105.9c-5.4,5.4-5.4,14.2,0,19.6l131.5,130L68.4,387.1  c-2.6,2.6-4.1,6.1-4.1,9.8c0,3.7,1.4,7.2,4.1,9.8l37.4,37.6c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1L256,313.1l130.7,131.1  c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1l37.4-37.6c2.6-2.6,4.1-6.1,4.1-9.8C447.7,393.2,446.2,389.7,443.6,387.1z"/></svg>
+    </div> 
+    </div>
+    <div class="divider"></div>
+    <div class="card card__text">
+        <div class="card__body__container">
+            <h3 class="card__header">Card Header</h3>
+            <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
+        </div>
+</div>
+<div class="divider"></div>
+    <div class="card__horizontal">
+        <img class="card__horizontal__img" src="https://via.placeholder.com/150" alt="img">
+        <div class="card__horizontal__body">
+            <h3 class="card__horizontal__header">Card Header</h3>
+            <p class="card__horizontal__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
+    </div>
+    </div>
+    <div class="divider"></div>
+    <div class="card card__shadow">
+        <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+        <div class="card__body__container">
+            <h3 class="card__header">Card Header</h3>
+            <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
         </div>
     </div>
 </div>
