--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
             <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
         </div>
     </div>
+    <div class="divider"></div>
+    <h3 style="text-align: center; margin: 1rem;">IMAGES</h3>
+    <img class="image__responsive" src="" alt="">
 </div>
 </body>
 </html>
