--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
     </div>
     <div class="divider"></div>
     <h3 style="text-align: center; margin: 1rem;">IMAGES</h3>
-    <img class="image__responsive" src="" alt="">
+    <img class="image__responsive" src="joshua-reddekopp-SyYmXSDnJ54-unsplash (1).jpg" alt="img">
+
+    <img 
+    class="image__responsive rounded__image"
+    src="joshua-reddekopp-SyYmXSDnJ54-unsplash (1).jpg" alt="">
 </div>
 </body>
 </html>
