--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <h3 style="text-align: center; margin: 1rem;">ICONS and FLOATING ACTION BUTTON</h3>
 <div style="text-align: center; margin: 1rem;">
     <button class="floating-action">
-        <svg style="background-color: transparent;" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1q142lx r-1xvli5t r-19u6a5r r-dnmrzs r-bnwqim r-1plcrui r-lrvibr" width="24"  height="24" ><g fill="#6f85ff"><path d="M19.75 11H13V4.25c0-.553-.447-1-1-1s-1 .447-1 1V11H4.25c-.553 0-1 .447-1 1s.447 1 1 1H11v6.75c0 .553.447 1 1 1s1-.447 1-1V13h6.75c.553 0 1-.447 1-1s-.447-1-1-1z" fill="#ffffff"></path></g></svg>
+        <svg style="background-color: transparent;" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1q142lx r-1xvli5t r-19u6a5r r-dnmrzs r-bnwqim r-1plcrui r-lrvibr" width="24"  height="24" ><g fill="#6f85ff"><path d="M19.75 11H13V4.25c0-.553-.447-1-1-1s-1 .447-1 1V11H4.25c-.553 0-1 .447-1 1s.447 1 1 1H11v6.75c0 .553.447 1 1 1s1-.447 1-1V13h6.75c.553 0 1-.447 1-1s-.447-1-1-1z" fill="#000000"></path></g></svg>
     </button>
 </div>
 <div class="divider"></div>
@@ -142,10 +142,25 @@
     <div class="divider"></div>
     <h3 style="text-align: center; margin: 1rem;">IMAGES</h3>
     <img class="image__responsive" src="joshua-reddekopp-SyYmXSDnJ54-unsplash (1).jpg" alt="img">
-
     <img 
     class="image__responsive rounded__image"
     src="joshua-reddekopp-SyYmXSDnJ54-unsplash (1).jpg" alt="">
+    <div class="divider"></div>
+    <h3 style="text-align: center; margin: 1rem;">INPUTS</h3>
+        <div class="input">
+            <input type="text" class="inputText" placeholder="input">
+        </div>
+        <div class="input">
+    <textarea  class="input-textArea" placeholder="enter your text"></textarea>
+    <div class="input-error">
+        <input type="text" class="inputText error">
+        <small class="error__message">there is an error</small>
+    </div>
+    <div class="input-error">
+<textarea  class="input-textArea error" ></textarea>
+<small class="error__message">there is an error</small>
 </div>
+<div class="divider"></div>
+
 </body>
 </html>
