--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
     <title>Component Library</title>
 </head>
 <body>
@@ -42,7 +44,30 @@
         <span class="badge-pills badge-warning">Warning</span>
         <span class="badge-pills badge-danger">Danger</span>
     </div>
-   
+    <div class="badge__on__avatar">
+        <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar">
+        <div class="badge-success badge-round"></div>
+    </div>
+   <div class="badge__on__avatar">
+       <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-2x">
+       <div class="badge-success badge-round"></div>
+   </div>
+   <div class="badge__on__avatar">
+    <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-3x">
+    <div class="badge-success badge-round badge-round-2x"></div>
+</div>
+<div class="badge__on__avatar">
+    <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar">
+    <div class="badge-danger badge-round"></div>
+</div>
+<div class="badge__on__avatar">
+   <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-2x">
+   <div class="badge-danger badge-round"></div>
+</div>
+<div class="badge__on__avatar">
+<img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-3x">
+<div class="badge-danger badge-round badge-round-2x"></div>
+</div>
     <div class="divider"></div>
     <h3 style="text-align: center; margin: 1rem;">BUTTONS</h3>
     <div style="margin: 1rem; text-align: center;">
@@ -83,7 +108,10 @@
 <h3 style="text-align: center; margin: 1rem;">ICONS and FLOATING ACTION BUTTON</h3>
 <div style="text-align: center; margin: 1rem;">
     <button class="floating-action">
-        <svg style="background-color: transparent;" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1q142lx r-1xvli5t r-19u6a5r r-dnmrzs r-bnwqim r-1plcrui r-lrvibr" width="24"  height="24" ><g fill="#6f85ff"><path d="M19.75 11H13V4.25c0-.553-.447-1-1-1s-1 .447-1 1V11H4.25c-.553 0-1 .447-1 1s.447 1 1 1H11v6.75c0 .553.447 1 1 1s1-.447 1-1V13h6.75c.553 0 1-.447 1-1s-.447-1-1-1z" fill="#000000"></path></g></svg>
+        <i class="fas fa-plus floating-icon"></i>
+    </button>
+    <button class="icon">
+       
     </button>
 </div>
 <div class="divider"></div>
@@ -112,7 +140,7 @@
         <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
     </div>
     <div class="card__dismiss">
-        <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg height="24px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="24px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M443.6,387.1L312.4,255.4l131.5-130c5.4-5.4,5.4-14.2,0-19.6l-37.4-37.6c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4  L256,197.8L124.9,68.3c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4L68,105.9c-5.4,5.4-5.4,14.2,0,19.6l131.5,130L68.4,387.1  c-2.6,2.6-4.1,6.1-4.1,9.8c0,3.7,1.4,7.2,4.1,9.8l37.4,37.6c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1L256,313.1l130.7,131.1  c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1l37.4-37.6c2.6-2.6,4.1-6.1,4.1-9.8C447.7,393.2,446.2,389.7,443.6,387.1z"/></svg>
+        <i class="fas fa-times"></i>
     </div> 
     </div>
     <div class="divider"></div>
@@ -197,7 +225,7 @@
     <div class="modal__header">
         <h3>modal header</h3>
         <div class="modal__close">
-            <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg  id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M443.6,387.1L312.4,255.4l131.5-130c5.4-5.4,5.4-14.2,0-19.6l-37.4-37.6c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4  L256,197.8L124.9,68.3c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4L68,105.9c-5.4,5.4-5.4,14.2,0,19.6l131.5,130L68.4,387.1  c-2.6,2.6-4.1,6.1-4.1,9.8c0,3.7,1.4,7.2,4.1,9.8l37.4,37.6c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1L256,313.1l130.7,131.1  c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1l37.4-37.6c2.6-2.6,4.1-6.1,4.1-9.8C447.7,393.2,446.2,389.7,443.6,387.1z"/></svg>
+            <i class="fas fa-times"></i>
         </div>
     </div>
     <div class="divider"></div>
