--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
 <h3 style="text-align: center; margin: 1rem;">SNACKBAR</h3>
 <div class="snackbar snackbar__primary">
     <p>this is a snackbar</p>
-    <div class="close__snackbar">X</div>
+    <div class="close__snackbar"><i class="fas fa-times"></i></div>
 </div>
 <div class="snackbar snackbar__secondary">
     <p>this is a snackbar</p>
-    <div class="close__snackbar">X</div>
+    <div class="close__snackbar"><i class="fas fa-times"></i></div>
 </div>
 <script src="./script.js"></script>
 </body>
