added comments ,  functionality for snackbar , refactor styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Component Library</title>
 </head>
 <body>
+    <!-- AVATAR -->
     <h3 style="text-align: center; margin: 1rem;">AVATAR</h3>
     <div style="display: flex; align-items: center;  margin-bottom: 1rem;">
         <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar">
@@ -17,6 +18,8 @@
         <img src="https://pbs.twimg.com/profile_images/1236563952605130752/d9EYzZpu.jpg" alt="" class="avatar avatar-3x">
     </div>
     <div class="divider"></div>
+
+    <!-- ALERTS -->
     <h3 style="text-align: center; margin: 1rem;">ALERTS</h3>
     <div class="alert alert-primary" role="alert">
         This is a PRIMARY Alert
@@ -31,6 +34,9 @@
         This is a WARNING Alert
     </div>
     <div class="divider"></div>
+
+
+    <!-- BADGES -->
     <h3 style="text-align: center; margin: 1rem;">BADGE</h3>
     <div style="display: flex; align-items: center; justify-content: center; margin: 1rem;">
         <span class="badge badge-primary">Primary</span>
@@ -69,6 +75,9 @@
 <div class="badge-danger badge-round badge-round-2x"></div>
 </div>
     <div class="divider"></div>
+
+<!-- BUTTONS -->
+
     <h3 style="text-align: center; margin: 1rem;">BUTTONS</h3>
     <div style="margin: 1rem; text-align: center;">
     <button class="btn btn-primary">
@@ -97,6 +106,9 @@
     </button>
 </div>
 <div class="divider"></div>
+
+
+<!-- LINKS -->
 <h3 style="text-align: center; margin: 1rem;">LINKS</h3>
 <div style="text-align: center; margin: 1rem;">
     <a class="link link-primary" href="">Primary Link</a>
@@ -105,6 +117,8 @@
     </a>
 </div>
 <div class="divider"></div>
+
+<!-- ICONS and FLOATING ACTION BUTTON -->
 <h3 style="text-align: center; margin: 1rem;">ICONS and FLOATING ACTION BUTTON</h3>
 <div style="text-align: center; margin: 1rem;">
     <button class="floating-action">
@@ -115,6 +129,9 @@
     </button>
 </div>
 <div class="divider"></div>
+
+<!-- CARDS -->
+
 <h3 style="text-align: center; margin: 1rem;">CARDS</h3>
 <div class="card">
     <img class="card__img" src="https://via.placeholder.com/150" alt="img">
@@ -167,12 +184,16 @@
         </div>
     </div>
     <div class="divider"></div>
+
+    <!-- IMAGES -->
     <h3 style="text-align: center; margin: 1rem;">IMAGES</h3>
     <img class="image__responsive" src="joshua-reddekopp-SyYmXSDnJ54-unsplash (1).jpg" alt="img">
     <img 
     class="image__responsive rounded__image"
     src="joshua-reddekopp-SyYmXSDnJ54-unsplash (1).jpg" alt="">
     <div class="divider"></div>
+
+    <!-- INPUT and TEXTAREA with VALIDATION STYLES -->
     <h3 style="text-align: center; margin: 1rem;">INPUTS</h3>
         <div class="input">
             <input type="text" class="inputText" placeholder="input">
@@ -191,6 +212,8 @@
 <small class="error__message">there is an error</small>
 </div>
 <div class="divider"></div>
+
+<!-- LIST STACKED -->
 <h3 style="text-align: center; margin: 1rem;">LIST (spaced and stacked)</h3>
 <ul class="list__stack">
     <li class="list__stack__item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error accusamus, harum pariatur temporibus fuga repudiandae perspiciatis nobis suscipit. Eum non esse voluptatem excepturi dolore cupiditate et delectus enim beatae facilis.</li>
@@ -199,6 +222,9 @@
     <li class="list__stack__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos illum quidem quae, eveniet eius corrupti culpa iure et consequatur esse vitae neque, velit voluptatibus quo quia a reiciendis, beatae error. Apple</li>
     </ul>
     <div class="divider"></div>
+
+<!-- LIST SPACED -->
+
     <ul class="list__spaced">
         <li class="list__spaced__item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error accusamus, harum pariatur temporibus fuga repudiandae perspiciatis nobis suscipit. Eum non esse voluptatem excepturi dolore cupiditate et delectus enim beatae facilis.</li>
         <li class="list__spaced__item">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, nisi? Cumque aliquid nobis ea eum. Perferendis labore, voluptate vel laudantium quas odio, dolores neque quisquam ducimus officiis est, fuga ea!</li>
@@ -206,19 +232,25 @@
         <li class="list__spaced__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos illum quidem quae, eveniet eius corrupti culpa iure et consequatur esse vitae neque, velit voluptatibus quo quia a reiciendis, beatae error. Apple</li>
 </ul>
 <div class="divider"></div>
+
+<!-- NAVIGATION BAR -->
+
 <h3 style="text-align: center; margin: 1rem;">NAVIGATION</h3>
 <nav class="navbar">
     <div class="nav__brand">
-        <h2><a class="navbrand__head" href="">navBrand</a></h2>
+        <h2><a class="navbrand__head" href="#">navBrand</a></h2>
     </div>
     <div class="nav__items">
-        <a class="nav__pills" href="">item1</a>
-        <a class="nav__pills" href="">item2</a>
-        <a class="nav__pills" href="">item3</a>
-        <a class="nav__pills" href="">item4</a>
+        <a class="nav__pills active" href="#">item1</a>
+        <a class="nav__pills" href="#">item2</a>
+        <a class="nav__pills" href="#">item3</a>
+        <a class="nav__pills" href="#">item4</a>
     </div>
 </nav>
 <div class="divider"></div>
+
+<!-- MODAL -->
+
 <h3 style="text-align: center; margin: 1rem;">MODAL</h3>
 <button class="btn btn-primary" id="open-modal">Open Modal</button>
 <div class="modal">
@@ -239,6 +271,9 @@
         <button class="btn btn-primary-danger" id="btn-close-modal">Close</button><button class="btn btn-primary">save changes</button>
     </div>
 </div>
+
+<!-- GRID LAYOUT -->
+
 <h3 style="text-align: center; margin: 1rem;">GRID LAYOUT</h3>
 <div class="grid__row__4">
     <div class="grid__col__4">1 of 3</div>
@@ -250,6 +285,9 @@
     <div class="grid__col__6">2 of 2</div>
 </div>
 <div class="divider"></div>
+
+<!-- TEXT UTILITIES -->
+
 <h3 style="text-align: center; margin: 1rem;">TEXT UTILITIES</h3>
 <h1>Heading 1</h1>
 <h2>Heading 2</h2>
@@ -266,14 +304,19 @@
     this is small text
 </small>
 <div class="divider"></div>
+
+<!-- SNACKBAR -->
+
 <h3 style="text-align: center; margin: 1rem;">SNACKBAR</h3>
+<button class="btn btn-primary" id="open-snackbar-success">Open Snackbar</button>
+<button class="btn btn-secondary" id="open-snackbar-secondary">Open secondary Snackbar</button>
 <div class="snackbar snackbar__primary">
     <p>this is a snackbar</p>
-    <div class="close__snackbar"><i class="fas fa-times"></i></div>
+    <div class="close__snackbar close__snackbar__primary"><i class="fas fa-times"></i></div>
 </div>
 <div class="snackbar snackbar__secondary">
     <p>this is a snackbar</p>
-    <div class="close__snackbar"><i class="fas fa-times"></i></div>
+    <div class="close__snackbar close__snackbar__secondary"><i class="fas fa-times"></i></div>
 </div>
 <script src="./script.js"></script>
 </body>
