--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 <h5>Heading 5</h5>
 <h6>Heading 6</h6>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure magnam facilis quae numquam, mollitia voluptatum dolor nihil eos commodi quod voluptates facere quam, provident eveniet quisquam culpa aspernatur delectus.</p>
-<h3 class="text__gray">
-    this is a gray text
+<h3 class="text__muted">
+    this is a muted text
 </h3>
 <h3 class="text__center">this is cenntered text</h3>
 <small class="text__small">
