minor style changes in card

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 <h3 style="text-align: center; margin: 1rem;">CARDS</h3>
 <div class="card">
-    <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+    <img class="image__responsive" src="https://via.placeholder.com/150" alt="img">
     <div class="card__body__container">
         <h3 class="card__header">Card Header</h3>
         <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
@@ -150,7 +150,7 @@
 </div>
 <div class="divider"></div>
 <div class="card card__with__badge">
-    <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+    <img class="image__responsive" src="https://via.placeholder.com/150" alt="img">
     <div class="card__body__container">
         <h3 class="card__header">Card Header</h3>
         <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
@@ -158,13 +158,13 @@
     <span class="badge badge-danger card__badge">HOT</span>
 </div>
 <div class="divider"></div>
-<div class="card card__with__dismiss">
-    <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+<div class="card card__with__overlayButton">
+    <img class="image__responsive" src="https://via.placeholder.com/150" alt="img">
     <div class="card__body__container">
         <h3 class="card__header">Card Header</h3>
         <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
     </div>
-    <div class="card__dismiss">
+    <div class="card__overlayButton">
         <i class="fas fa-times"></i>
     </div> 
     </div>
@@ -185,7 +185,7 @@
     </div>
     <div class="divider"></div>
     <div class="card card__shadow">
-        <img class="card__img" src="https://via.placeholder.com/150" alt="img">
+        <img class="image__responsive" src="https://via.placeholder.com/150" alt="img">
         <div class="card__body__container">
             <h3 class="card__header">Card Header</h3>
             <p class="card__body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi repellendus sed molestiae delectus? Ut ipsum, cum pariatur soluta, ipsa minus esse aut magni quas dolorum necessitatibus vel quod distinctio temporibus.</p>
